<resources>
    <string name="app_name">OpenLink</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="setting_title">Settings</string>
    <string name="setting_swt_auto">Start Automatic</string>
    <string name="setting_swt_edit">Edit</string>
    <string name="setting_label_url">Label</string>
    <string name="setting_text_url">www.example.com</string>
    <string name="setting_text_block">Define here the link you want to save!</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
</resources>