<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_browse_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:deviceIds="tv"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/app_icon_saibr" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Information"
                    android:textAlignment="center" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_main_label_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/lb_action_1_line_height"
                android:hint="@string/setting_label_url" />

            <TextView
                android:id="@+id/txt_main_txt_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="2dp"
                android:textSize="@dimen/lb_action_text_size"
                android:hint="@string/setting_text_url" />

            <Button
                android:id="@+id/btn_main_enter"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="Enter" />

            <Button
                android:id="@+id/btn_main_exit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="Exit" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp">

            <TextView
                android:id="@+id/txt_setting_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/setting_title" />

            <TextView
                android:id="@+id/txt_setting_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="50dp"
                android:text="@string/setting_text_block" />


            <Switch
                android:id="@+id/swt_setting_edit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/setting_swt_edit" />

            <Switch
                android:id="@+id/swt_setting_auto"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:enabled="false"
                android:text="@string/setting_swt_auto"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/etx_setting_label_url"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:enabled="false"
                android:hint="@string/setting_label_url"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/etx_setting_txt_url"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/setting_text_url"
                android:inputType="textPersonName"
                android:textAlignment="center" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>